# python_api_development

./: README.md  main.py  pyproject.toml
app/: db.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py
