[project]
name = "python-api-development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==3.2.2",
    "fastapi[all]>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.50",
]
